trunk/Archive2/be/d67d30c757864e/output
main.cpp:6:16: error: template declaration of 'constexpr const bool is_same_v'
 constexpr bool is_same_v = std::is_same<T, U>::value;
                ^
